# Chatbot

./: .env  .gitignore  README.md  app.py  financial_agent_modular.py  main.py  pyproject.toml  stock_analysis_output.txt
agent/: config.py  nodes.py  state.py  tools.py
agent/__pycache__/: nodes.cpython-313.pyc.1435502392880  nodes.cpython-313.pyc.1596051175216  nodes.cpython-313.pyc.1740256132272  nodes.cpython-313.pyc.1765388859056  nodes.cpython-313.pyc.2420003190960  nodes.cpython-313.pyc.2792608447664  nodes.cpython-313.pyc.3039760153008  tools.cpython-313.pyc.2038419488304  tools.cpython-313.pyc.2259767228976
financialagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
